--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
         let explosion = false;
         let textAlpha = 0;
         let textShown = false;
+        let frameCount = 0;
 
         function setup() {
             createCanvas(windowWidth, windowHeight);
             colorMode(HSB, 360, 100, 100, 1);
-            for (let i = 0; i < 100; i++) {
+            for (let i = 0; i < 200; i++) { // Increased number of particles
                 particles.push(new Particle(random(width), random(height)));
             }
         }
 
         function draw() {
             background(270, 80, 20, 0.1);
+            frameCount++;
 
             if (!heartFormed) {
                 for (let particle of particles) {
@@ -36,7 +38,7 @@
                 checkHeartFormation();
             } else if (!explosion) {
                 drawHeart();
-                if (frameCount % 60 === 0) {
+                if (frameCount > 300) { // Delay explosion for better heart formation
                     explosion = true;
                 }
             } else {
@@ -44,7 +46,7 @@
                     particle.explode();
                     particle.show();
                 }
-                if (!textShown && frameCount % 30 === 0) {
+                if (!textShown && frameCount % 60 === 0) {
                     textShown = true;
                 }
                 drawText();
@@ -56,13 +58,13 @@
             let centerY = height / 2;
             let inHeart = particles.filter(p => {
                 let d = dist(p.x, p.y, centerX, centerY);
-                return d < 100 && p.life > 200;
+                return d < 150 && p.life > 100; // Adjusted range and life threshold
             });
-            if (inHeart.length > 80) {
+            if (inHeart.length > 100) {
                 heartFormed = true;
                 for (let particle of particles) {
-                    particle.targetX = centerX + 100 * sin(particle.angle);
-                    particle.targetY = centerY + 100 * cos(particle.angle) * (1 - abs(sin(particle.angle)));
+                    particle.targetX = centerX + 150 * sin(particle.angle);
+                    particle.targetY = centerY + 150 * cos(particle.angle) * (1 - abs(sin(particle.angle)));
                 }
             }
         }
@@ -70,12 +72,12 @@
         function drawHeart() {
             noFill();
             stroke(0, 80, 100, 0.8);
-            strokeWeight(2);
+            strokeWeight(3);
             beginShape();
             let x, y;
-            for (let a = 0; a < TWO_PI * 2; a += 0.1) {
-                x = width / 2 + 100 * 16 * pow(sin(a), 3);
-                y = height / 2 - 100 * (13 * cos(a) - 5 * cos(2 * a) - 2 * cos(3 * a) - cos(4 * a));
+            for (let a = 0; a < TWO_PI * 2; a += 0.05) {
+                x = width / 2 + 150 * 16 * pow(sin(a), 3);
+                y = height / 2 - 150 * (13 * cos(a) - 5 * cos(2 * a) - 2 * cos(3 * a) - cos(4 * a));
                 vertex(x, y);
             }
             endShape(CLOSE);
@@ -83,9 +85,9 @@
 
         function drawText() {
             textAlign(CENTER, CENTER);
-            textSize(50);
+            textSize(80);
             fill(60, 80, 100, textAlpha);
-            textAlpha = min(textAlpha + 0.05, 1);
+            textAlpha = min(textAlpha + 0.02, 1);
             text('Đ ♥ Y 1st Anniversary', width / 2, height / 2);
         }
 
@@ -93,34 +95,36 @@
             constructor(x, y) {
                 this.x = x;
                 this.y = y;
-                this.vx = random(-2, 2);
-                this.vy = random(-2, 2);
+                this.vx = random(-4, 4); // Increased velocity
+                this.vy = random(-4, 4);
                 this.angle = random(TWO_PI);
                 this.life = 255;
                 this.color = color(random(300, 340), 80, 100);
+                this.targetX = x;
+                this.targetY = y;
             }
 
             update() {
                 if (!heartFormed) {
                     this.x += this.vx;
                     this.y += this.vy;
-                    this.life -= 2;
+                    this.life -= 1;
                 } else {
-                    this.x = lerp(this.x, this.targetX, 0.05);
-                    this.y = lerp(this.y, this.targetY, 0.05);
+                    this.x = lerp(this.x, this.targetX, 0.1);
+                    this.y = lerp(this.y, this.targetY, 0.1);
                 }
             }
 
             explode() {
-                this.x += random(-5, 5);
-                this.y += random(-5, 5);
-                this.life -= 5;
+                this.x += random(-10, 10);
+                this.y += random(-10, 10);
+                this.life -= 3;
             }
 
             show() {
                 noStroke();
                 fill(this.color, this.life);
-                ellipse(this.x, this.y, 10, 10);
+                ellipse(this.x, this.y, 15, 15); // Increased particle size
             }
         }
 
